--- a/Rotor_dynamics/imgui.ini
+++ b/Rotor_dynamics/imgui.ini
@@ -3,3 +3,13 @@ Pos=60,60
 Size=400,400
 Collapsed=0
 
+[Window][View Options]
+Pos=60,60
+Size=188,184
+Collapsed=0
+
+[Window][Heat Equation Solver]
+Pos=60,60
+Size=438,689
+Collapsed=0
+
